Saved controller bg image to client data.  Fixed spacing on form in dashboard compoent

--- a/client/src/app/home/home.component.css
+++ b/client/src/app/home/home.component.css
@@ -2,7 +2,7 @@
 .splash-bg {
     height: 100vh;
     width: 100%;
-    background: url('https://images.pexels.com/photos/159204/game-controller-joystick-joypad-gamepad-159204.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
+    background: url('/assets/game-controller.jpeg');
     background-attachment: fixed;
     background-size: cover;
     position: absolute;
